fix height on mobile

--- a/career-1.css
+++ b/career-1.css
@@ -1,15 +1,5 @@
 .background {
   background-image: url("https://res.cloudinary.com/dvpcjyb48/image/upload/v1612297564/Siemens%20-%20Saint-Denis.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  height: 100vh;
-  width: 100%;
-  z-index: -1;
-  filter: brightness(0.2);
 }
 
 @media (max-width: 480px) {
