--- a/career.css
+++ b/career.css
@@ -1,10 +1,14 @@
-body::before {
-  content: "";
+.background {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   position: fixed;
   top: 0px;
   left: 0px;
   height: 100vh;
-  filter: grayscale(20%);
+  width: 100%;
+  z-index: -1;
+  filter: brightness(0.2);
 }
 .container {
   height: calc(100vh - 80px - 100px); /*80px = navBar 100px = footer*/
